--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-scripts": "5.0.1",
+        "react-uuid": "^2.0.0",
         "tailwindcss": "^3.3.2",
         "web-vitals": "^2.1.0"
     },
